# telegram-chat-digest

./: .env.example  .gitignore  AGENTS.md  AUTODEV.md  FEATURES.md  FEATURE_IDEAS.md  Makefile  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: feature-loop.example.md  feature-loop.md
.claude/commands/: tg-ask.md  tg-digest.md  tg-discover.md  tg-mine.md  tg-overview.md  tg-sync.md  tg-topics.md  tg-why.md
.claude/features/: _TEMPLATE.md  decision-log.md  shards-module.md  tg-why.md
.claude/skills/feature-audit/: SKILL.md
.claude/skills/feature-build/: SKILL.md  catalog.py
.claude/skills/feature-design/: SKILL.md
.claude/skills/feature-ship/: SKILL.md
.github/workflows/: ci.yml
examples/: README.md
examples/team-platform/: .last_delta.json  2026-W09.jsonl  2026-W10.jsonl  context.md  decisions.jsonl  delta-log.md  topics.md
scripts/: decisions.py  import_export.py  migrate_to_weekly.py  shards.py  tg_digest.py  tg_discover.py  tg_overview.py  tg_sync.py
tests/: conftest.py  test_decisions.py  test_shards.py  test_tg_digest.py  test_tg_mine.py  test_tg_why.py
